--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
 			color: velvet;
 		}
 
-		.button {
+		.outerbutton {
 			background: white;
 			position: absolute;
+			top: 20px;
 			right: 20px;
+		}
+
+		#button {
+
+
+
 			border: 5px ridge grey;
 			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			font-weight: bolder;
@@ -29,15 +36,8 @@
 			font-variant: small-caps;
 		}
 
-		.button:hover {
 
-			transform: scale(1.5, 1.4);
-			border: none;
-			font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-			font-weight: bolder;
-			opacity: 1;
 
-		}
 
 		.customization {
 			position: absolute;
@@ -53,6 +53,7 @@
 			height: 50%;
 			width: 70%;
 			opacity: 0.6;
+			display: none;
 			border: 5px solid blue;
 			border-radius: 25%;
 			background-color: rgb(95, 230, 95);
@@ -62,9 +63,10 @@
 
 		.close {
 			text-align: center;
-			border: 2px solid black;
+			border-bottom: 2px solid black;
 			user-select: none;
 		}
+
 
 		.repeat {
 			height: 50px;
@@ -120,36 +122,41 @@
 </head>
 
 <body>
-	<div class="button">Customize</div>
+
 	<div class="customization">
+		<div class="outerbutton">
+			<div id="button">Customize</div>
+		</div>
+
+
 		<div class="innercustomization">
 			<div class="close">&#10005;</div>
 			<div class="actions">
 				<div class="first">
 					<p>
 						Pacticle size:
-						<input type="number" value="3">
+						<input type="number" value="3" name="particlesize">
 					</p>
 
 				</div>
 				<div class="second">
 					<p>
 						Pacticle max speed:
-						<input type="number" value="5">
+						<input type="number" value="5" name="particlespeed">
 					</p>
 				</div>
 				<div class="third">
 					<p>Particle color:</p>
-					<input type="color" value="#FF0000">
+					<input type="color" value="#FF0000" name="particlecolor">
 				</div>
 				<div class="fourth">
 					<p>Background color:</p>
-					<input type="color" value="#000000">
+					<input type="color" value="#000000" name="backgroundcolor">
 				</div>
 
 				<div class="fifth">
 					<p>Lines length:</p>
-					<input type="number" value="15">
+					<input type="number" value="15" name="lineslength">
 				</div>
 			</div>
 		</div>
